github_data_collector/src/data/issue_comment/mofarrell_p2pvc.txt
Feature request: could you set it up so that it converts local video to ascii and then sends the ascii to the client, thus greatly reducing bandwidth, instead of sending video and processing it locally? I was able to ssh into each other and connect to the localhost, and that worked but at the cost of sound.
This little fix solve the compilation error on some Ubuntu installations
by providing the correct OpenCV headers.
gcc `-I / usr / local / include / opencv -I / usr / local / include` -Isrc / inc -O2 -Wall -DPA_USE_ALSA src / video.c -c -o objs / video.o
/ bin / sh: -I / usr / local / include / opencv: There is no such file or directory
src / video.c: 1: 10: fatal error: cv.h: There is no such file or directory
  #include <cv.h>
           ^ ~~~~~
compilation aborted.
make: *** [Makefile: 49: objs / video.o] Error 1
The brew instructions need updating.

```shell
$ brew tap homebrew/science
Error: homebrew/science was deprecated. This tap is now empty as all its formulae were migrated.
```
gcc -Isrc/inc -O2 -Wall -DPA_USE_COREAUDIO `pkg-config --cflags opencv` src/video.c -c -o objs/video.o
In file included from src/video.c:1:
In file included from /usr/local/Cellar/opencv/3.4.0/include/opencv/cv.h:63:
In file included from /usr/local/Cellar/opencv/3.4.0/include/opencv2/core/core_c.h:48:
/usr/local/Cellar/opencv/3.4.0/include/opencv2/core/types_c.h:929:13: warning: implicit declaration of function
      'cvRound' is invalid in C99 [-Wimplicit-function-declaration]
    ipt.x = cvRound(point.x);
            ^
src/video.c:18:8: error: unknown type name 'CvCapture'
static CvCapture* cv_cap;
       ^
src/video.c:52:3: warning: implicit declaration of function 'cvReleaseCapture' is invalid in C99
      [-Wimplicit-function-declaration]
  cvReleaseCapture( &cv_cap );
  ^
src/video.c:99:12: warning: implicit declaration of function 'cvCaptureFromCAM' is invalid in C99
      [-Wimplicit-function-declaration]
  cv_cap = cvCaptureFromCAM(0);
           ^
src/video.c:107:17: warning: implicit declaration of function 'cvQueryFrame' is invalid in C99
      [-Wimplicit-function-declaration]
    color_img = cvQueryFrame(cv_cap);
                ^
4 warnings and 1 error generated.
make: *** [objs/video.o] Error 1
$ make
gcc -Isrc/inc -O2 -Wall -DPA_USE_COREAUDIO `pkg-config --cflags opencv` src/audio.c -c -o objs/audio.o
src/audio.c:34:10: fatal error: 'portaudio.h' file not found
# include <portaudio.h>

```
     ^
```

1 error generated.
make: **\* [objs/audio.o] Error 1

Hi, I believe I have installed portaudio properly, why does this show every time? I can see portaudio.h in my usr/local/include/, what should I do? Many thanks.

I have looked at a few source files for your current software. I have noticed that some checks for return codes are missing.

Would you like to add more error handling for return values from functions like the following?
- [fopen](http://pubs.opengroup.org/onlinepubs/9699919799/functions/fopen.html) ⇒ [PaUtil_DumpHighSpeedLog](https://github.com/mofarrell/p2pvc/blob/cddbc34794533a59fec06cd08b5ecfd4e84b992c/src/pa_trace.c#L200)
- [malloc](http://pubs.opengroup.org/onlinepubs/9699919799/functions/malloc.html) ⇒ [p2p_send_pass](https://github.com/mofarrell/p2pvc/blob/7374874e853ebf093ccdc78a8717ea4fdd3b9b8d/src/p2plib.c#L172)
- [pthread_create](http://pubs.opengroup.org/onlinepubs/9699919799/functions/pthread_create.html) ⇒ [start_video](https://github.com/mofarrell/p2pvc/blob/6fd3b50e24290cddd0f1d6165f2dbf65dbe1575d/src/video.c#L64)

You can connect to your own computer and have someone else connect to it and it will try and display both video feeds. You can also connect multiple computers this way. Audio is being kinda buggy but this potentially means super easy conference calls? with a bit of testing this bug could almost be called a feature. 

Running Ubuntu 14.04
Cheese and other webcam tools open my camera fine but p2pvc does not do anything.
When I launch p2pvc one of my CPU cores jumps to 100% and stays there until the program is terminated. It shows "User defined signal 1" upon termination. Using "-e" does nothing.

http://www.opus-codec.org/
May be a useful compression library.
